--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[32,)"
+loaderVersion="[40,)"
 license="MIT License"
 
 [[mods]]
@@ -8,21 +8,21 @@ license="MIT License"
     displayName="Oooh, Pinky!"
     logoFile="logo.png"
     authors="jerrylu086"
-    description=""
+    description="A cool new material you can craft!"
     itemIcon="oooh_pinky:rose_gold_ingot"
     configBackground="oooh_pinky:textures/block/rose_gold_block.png"
 
 [[dependencies.oooh_pinky]]
     modId="forge"
     mandatory=true
-    versionRange="[32,)"
+    versionRange="[40,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.oooh_pinky]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16,1.17)"
+    versionRange="[1.18.2,1.19)"
     ordering="NONE"
     side="BOTH"
 
