--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs = -Xmx3G
 org.gradle.daemon = false
 
 # Mod info
-mod_version = 1.19-2.0
-mc_version = 1.19.2
-forge_version = 43.1.1
+mod_version = 1.20.1-2.0
+mc_version = 1.20.1
+forge_version = 47.1.43
 
 # Build dependencies
-forgegradle_version = 5.1.+
+forgegradle_version = 6.0.11
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
 librarian_version = 1.+
-parchment_version = 2022.09.04
+parchment_version = 2023.09.03
 
 # Dependecies
-fd_file = 5051241
+fd_file = 5051242
