--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ license="MIT License"
     displayName="Oooh, Pinky!"
     logoFile="logo.png"
     authors="jerrylu086"
-    description=""
+    description="A cool new material you can craft!"
     itemIcon="oooh_pinky:rose_gold_ingot"
     configBackground="oooh_pinky:textures/block/rose_gold_block.png"
 
