--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,23 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx3G
 org.gradle.daemon = false
+org.gradle.debug = false
 
-# Mod info
-mod_version = 1.20.1-2.0
-mc_version = 1.20.1
-forge_version = 47.1.43
+# Dependencies
+minecraft_version = 1.20.4
+minecraft_version_range = [1.20.4,1.21)
+neo_version = 20.4.147-beta
+neo_version_range = [20.4,)
+loader_version_range = [2,)
 
-# Build dependencies
-forgegradle_version = 6.0.11
-mixingradle_version = 0.7-SNAPSHOT
-mixin_version = 0.8.5
-librarian_version = 1.+
-parchment_version = 2023.09.03
+neogradle.subsystems.parchment.minecraftVersion = 1.20.3
+neogradle.subsystems.parchment.mappingsVersion = 2023.12.31
 
-# Dependecies
-fd_file = 5051242
+# Mod Properties
+mod_id = oooh_pinky
+mod_name = Oooh, Pinky!
+mod_license = MIT License
+mod_version = 1.20.4-2.0
+mod_group_id = com.jerrylu086.oooh_pinky
+mod_authors = JerryLu086
+mod_description = A cool new material you can craft!
